--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,16 @@ django-cms==3.0
 
 # These dependencies are brought in by django CMS, but if you want to
 # lock-in their version, specify them
-Django==1.6.2
+Django==1.8
 
 django-classy-tags==0.4
 South==0.8.4
 html5lib==1.0b1
 django-mptt==0.6
-django-sekizai==0.7
+django-sekizai==0.8.2
 six==1.9.0
-djangocms-admin-style==0.1.2
-django-treebeard
+djangocms-admin-style==0.2.2
+django-treebeard==3.0
 django-media-tree
 django-appmedia
 
